Kubernetes/brmysql.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brmysql
  labels:
    app: brmysql
  namespace: becomerich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brmysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: brmysql
    spec:
      containers:
      - name: brmysql
        image: mysql:8
        ports:
          - containerPort: 3306
        volumeMounts:
        - mountPath: "/docker-entrypoint-initdb.d"
          name: brmysql-pv
      volumes:
        - name: brmysql-pv
          persistentVolumeClaim:
            claimName: brmysql-pvc
