Kubernetes/brdb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: br-backend-svc
  labels:
    app: br-backend-svc
spec:
  selector:
    app: br-backend
  ports:
    - port: 5500
      targetPort: 5500
