Kubernetes/brmysql.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brmysql-svc
  labels:
    app: brmysql-svc
spec:
  selector:
    app: brmysql
  ports:
    - port: 3306
      targetPort: 3306
